# PROJET-PARKY

./: ajoutavis.c  callbacks.c  callbacks.h  erer.bak  fin.glade  main.c  project6.glade
PROJETFINAL/: Makefile  Makefile.am  Makefile.in  aclocal.m4  aloulou.glade.bak  aloulou.gladep.bak  config.h  config.status  configure
PROJETFINAL/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
PROJETFINAL/po/: Makefile  Makefile.in
PROJETFINAL/src/: Makefile  Makefile.am  Makefile.in  ajoutavis.h  callbacks.c  callbacks.h  compte.c  interface.c  interface.h  main.c  reservation.c
parky/parking/: Makefile  config.status  interface.glade.bak
parky/parking/autom4te.cache/: requests
parky/parking/src/: Makefile  citoyen.txt  comptes.txt  interface.c  parking.txt  parky
trappa/: Makefile  Makefile.in  config.h  config.status  configure  configure.in  configure.in~  configure~  project4.glade.bak  project4.gladep.bak
trappa/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.3
trappa/po/: Makefile  Makefile.in
trappa/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  compte.h  interface.c  interface.c.bak  main.c  rayen  trappa
